--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,7 +6,8 @@
       "es2021": true
   },
   "extends": [
-      "plugin:react/recommended"
+      "plugin:react/recommended",
+      "react-app"
   ],
   "overrides": [
       {
